feat: select partition-aware backtest inputs